--- a/WebContent/main.html
+++ b/WebContent/main.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="login2.css" />
     <title>제목</title>
     <style>
       /* 스타일  */
