--- a/WebContent/0229_sw/login&search.html
+++ b/WebContent/0229_sw/login&search.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>animated login</title>
-    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="login2.css" />
     <link rel="stylesheet" href="search.css" />
     <script
       src="https://kit.fontawesome.com/8fb683b25a.js"
