--- a/WebContent/0229_sw/login.html
+++ b/WebContent/0229_sw/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>animated login</title>
-    <link rel="stylesheet" href="login3.css" />
+    <link rel="stylesheet" href="login.css" />
   </head>
   <!-- ///////////////////////////////  -->
   <body>
@@ -13,6 +13,7 @@
       <input type="text" name="" placeholder="username" />
       <input type="password" name="" placeholder="password" />
       <input type="submit" name="" value="login" />
+      <input type="submit" name="" value="Sign in" />
     </form>
   </body>
 </html>
