--- a/WebContent/0301_sw/responsive menu.html
+++ b/WebContent/0301_sw/responsive menu.html
@@ -28,7 +28,7 @@
     <ul class="menu">
       <a href="#">about us</a>
       <a href="#">customer</a>
-      <a href="#">enterprise</a>
+      <a href="https://www.naver.com">enterprise</a>
       <a href="#">contact</a>
       <label for="chk" class="hide-menu-btn">
         <i class="far fa-times-circle"></i>
