--- a/WebContent/main.html
+++ b/WebContent/main.html
@@ -11,6 +11,9 @@
   <!--///-->
   <body>
     <!--내용-->
+
+    <!--JS-->
+    <script type="text/javascript" src="script2.js"></script>
   </body>
 </html>
 <!--///-->
