--- a/WebContent/0312_sw/sign_in.html
+++ b/WebContent/0312_sw/sign_in.html
@@ -33,7 +33,7 @@
       <div class="flex_box">
         <div class="label">이름</div>
         <div class="text_center">
-          <input type="text" name="hw_name" />
+          <input type="text" name="hw_name" placeholder="이 름" />
         </div>
       </div>
       <!-- ----------------- -->
@@ -50,11 +50,11 @@
       <div class="flex_box">
         <div class="label">비밀번호</div>
         <div class="text_center">
-          <input type="password" name="hw_pw" value="" />
+          <input type="password" name="hw_pw" value="" placeholder="4 ~ 12자리" />
         </div>
         <div class="label">confirm 비밀번호</div>
         <div class="text_center">
-          <input type="password" name="hw_pw_confirm" value="" />
+          <input type="password" name="hw_pw_confirm" value="" placeholder="4 ~ 12자리" />
         </div>
       </div>
       <!-- ----------------- -->
