--- a/WebContent/main.html
+++ b/WebContent/main.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="login2.css" />
-    <title>제목</title>
-    <style>
-      /* 스타일  */
-    </style>
-  </head>
-  <!--///-->
-  <body>
-    <!--내용-->
 
-    <!--JS-->
-    <script type="text/javascript" src="script2.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="login2.css" />
+  <title>제목</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+  <style>
+    /* 스타일  */
+  </style>
+</head>
+<!--///-->
+
+<body>
+  <!--내용-->
+
+  <!--JS-->
+  <script type="text/javascript" src="script2.js"></script>
+</body>
+
 </html>
 <!--///-->
