--- a/WebContent/0312_sw/sign_in.html
+++ b/WebContent/0312_sw/sign_in.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="sign_in_dev.css" />
   <title>회원가입</title>
 
